<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_controllers</name>
  <version>5.17.0</version>
  <description>Generic robot controllers for the RTC framework: PController, ClikController, JointPDController, OperationalSpaceController, and GraspController (adaptive PI force control).</description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rtc_controller_interface</depend>
  <depend>rtc_base</depend>
  <depend>rtc_msgs</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>
  <depend>rtc_urdf_bridge</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
