<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_inference</name>
  <version>5.17.0</version>
  <description>RT-safe inference engine abstraction for RTC framework. Header-only INTERFACE library with ONNX Runtime backend (optional, stub fallback when unavailable).</description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rtc_base</depend>
  <!-- ONNX Runtime: not in apt/rosdep on jazzy/noble. Install manually via
       install.sh (apt fallback to /opt/onnxruntime tarball) or system pkg
       manager when available. See README "ONNX Runtime" section. -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
