<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_mujoco_sim</name>
  <version>5.20.0</version>
  <description>
    MuJoCo 3.x physics simulation with interactive GLFW viewer.
    Multi-group support (robot physics + fake LPF echo-back), configurable
    servo gains, runtime solver tuning, and sensor data publishing.
  </description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>rtc_msgs</depend>
  <depend>rtc_base</depend>
  <depend>tinyxml2</depend>

  <!-- Robot model files (MJCF, URDF, meshes) -->
  <exec_depend>ur5e_description</exec_depend>
  <!-- Hand UDP config (launch에서 hand_udp_node.yaml 참조) -->
  <exec_depend>ur5e_hand_driver</exec_depend>
  <!-- launch 에서 session 디렉토리 헬퍼 사용 -->
  <exec_depend>rtc_tools</exec_depend>

  <!-- MuJoCo (optional C++ library — not a ROS2 package; install separately)
       https://github.com/google-deepmind/mujoco/releases -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
